2008-07-07  Jonathan Pobst  <monkey@jpobst.com>

	* FolderBrowserDialog.cs: If we can't find the SelectedPath, display
	the full tree instead of nothing.  [Improves bug #406584]

2008-07-07  George Giolfan  <georgegiolfan@yahoo.com>

	* ThemeWin32Classic.cs: Adjusted minimized window painting.

2008-07-07  George Giolfan  <georgegiolfan@yahoo.com>

	* InternalWindowManager.cs: No longer draws decorations for maximized MDI
	children.

2008-07-04  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: Add a null check when using CollapseAll on an
	empty tree.  [Fixes bug #406449]

2008-07-03  Jonathan Pobst  <monkey@jpobst.com>

	* Form.cs: Make OnMenuComplete internal so we can call it.
	* MenuAPI.cs: Raise Form.MenuComplete when a menu item is clicked.
	[Fixes bug #399321]

2008-07-03  Jonathan Pobst  <monkey@jpobst.com>

	* TabControl.cs: Handle Up and Down keys when TabControl is in
	vertical alignment.
	[Fixes bug #399585]

2008-07-03  Jonathan Pobst  <monkey@jpobst.com>

	* TabControl.cs: Invalidate when we remove a tab.  Guard against
	an AOORE when trying to remove a tabpage that is not owned by the
	parent control.
	[Fixes bug #399927]

2008-07-03  Jonathan Pobst  <monkey@jpobst.com>

	* ScrollBar.cs: Change the LargeChange calculation to be correct.
	Ensure we are using LargeChange instead of large_change so we our
	calculations are correct.
	[Fixes bug #403122]

2008-07-03  Jonathan Pobst  <monkey@jpobst.com>

	* TableLayoutPanel.cs: When we change to a serialized TableLayoutSettings,
	we need to ensure the ColumnCount/RowCount gets set.
	[Fixes bug #404851]

2008-07-02  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListBox.cs: When handling item navigation, if selection mode is
	None, call EnsureVisible, since scrolling is normally handled by
	selection, that we are not calling in this case.
	Fixes #398345.

2008-07-02  Jonathan Pobst  <monkey@jpobst.com>

	* ContainerControl.cs: Apply a patch from Ernesto Carrea that adds